Increase margin for divs to prevent them from going behind the nav bar

--- a/starter_website/static/styles.css
+++ b/starter_website/static/styles.css
@@ -91,23 +91,23 @@ table, th, td {
 }
 
 .ordersContainer{
-	margin-left: 250px;
+	margin-left: 265px;
 }
 
 .customersContainer{
-	margin-left: 250px;
+	margin-left: 265px;
 	text-align: center;
 }
 .orderProductsContainer{
-	margin-left: 250px;
+	margin-left: 265px;
 }
 
 .productsContainer{
-	margin-left: 250px;
+	margin-left: 265px;
 }
 
 .storesContainer{
-	margin-left: 250px;
+	margin-left: 265px;
 }
 
 .imageContainer{
